Prevent Section animation when component is off screen (from the top)

--- a/components/UI/Section.module.scss
+++ b/components/UI/Section.module.scss
@@ -1,5 +1,5 @@
 .Section {
-  padding:2em;
+  padding:2em 1em;
 }
 
 .Container {
